header html and css

--- a/index.html
+++ b/index.html
@@ -6,12 +6,36 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Miref - Open up your business to thousands of freelance marketers</title>
-    <link rel="stylesheet" href="/dist/style.css">
+    <link rel="stylesheet" href="/dist/css/style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&display=swap" rel="stylesheet">
 </head>
 <body>
+
+    <header class="header">
+        <nav class="flex flex-jc-sb flex-ai-c">
+            <a href="/" class="header__logo">
+                <img src="/assets/Images/Logo.svg" alt="Miref Logo">
+            </a>
+            <a href="#" id="btn_menu" class="header__menu hide-for-desktop">
+                <span></span>
+                <span></span>
+                <span></span>
+            </a>
+
+            <div class="header__links hide-for-mobile">
+                <a href="#">Home</a>
+                <a href="#">About Us</a>
+                <a href="#">For Business</a>
+                <a href="#">For Refferers</a>
+                <a href="#">FAQ</a>
+                <a href="#">Contact</a>
+            </div>
+
+            <a href="#" class="btn-primary-xl hide-for-mobile">Stay Informed</a>
+        </nav>
+    </header>
 
 <script src="/app/js/script.js"></script>
 </body>
