created hero section

--- a/index.html
+++ b/index.html
@@ -37,6 +37,17 @@
         </nav>
     </header>
 
+    <section class="hero section">
+        <div class="hero__content container flex">
+            <div class="hero__text">
+                <h1>Where Businesses and Referrers <span>meet</span></h1>
+                <p>Open up your business to thousands of freelance marketers or join to get instant payment when you refer customer to a business</p>
+                <a href="#" class="btn-primary-xl">Stay Informed</a>
+            </div>
+            <div class="hero__image"></div>
+        </div>
+    </section>
+
 <script src="/app/js/script.js"></script>
 </body>
 </html>
