update on features and newsletter section

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 </head>
 <body>
 
+    <!-- Header Section -->
     <header class="header">
         <nav class="flex flex-jc-sb flex-ai-c">
             <a href="/" class="header__logo">
@@ -25,7 +26,7 @@
             </a>
 
             <div class="header__links hide-for-mobile">
-                <a href="#">Home</a>
+                <!-- <a href="#">Home</a> -->
                 <a href="#">About Us</a>
                 <a href="#">For Business</a>
                 <a href="#">For Refferers</a>
@@ -33,18 +34,106 @@
                 <a href="#">Contact</a>
             </div>
 
-            <a href="#" class="btn-primary-xl hide-for-mobile">Stay Informed</a>
+            <a href="#" class="btn-primary hide-for-mobile">Stay Informed</a>
         </nav>
     </header>
 
+    <!-- Hero Section -->
     <section class="hero section">
         <div class="hero__content container flex">
             <div class="hero__text">
                 <h1>Where Businesses and Referrers <span>meet</span></h1>
                 <p>Open up your business to thousands of freelance marketers or join to get instant payment when you refer customer to a business</p>
-                <a href="#" class="btn-primary-xl">Stay Informed</a>
+                <a href="#" class="btn-primary">Stay Informed</a>
             </div>
             <div class="hero__image"></div>
+        </div>
+        <img src="/assets/Images/hero layer blur.png" alt="" class="hero__blur hide-for-mobile">
+    </section>
+
+    <!-- Social Proof Section -->
+    <section class="social_proof section">
+        <div class="social_proof__content container">
+            <p>Our Partners</p>
+            <div class="social_proof__logos flex">
+                <img src="/assets/Images/Monnify logo.svg" alt="">
+                <img src="/assets/Images/Quickteller logo.svg" alt="">
+                <img src="/assets/Images/Master Card logo.svg" alt="">
+                <img src="/assets/Images/Verve logo.svg" alt="">
+                <img src="/assets/Images/Visa logo.svg" alt="">
+            </div>
+        </div>
+    </section>
+
+
+    <!-- Features Section -->
+    <section class="features section">
+        <div class="features__heading container text-center">
+            <h3>We win together.</h3>
+            <p>Join the fastest growing community of business owners and freelance marketers.</p>
+        </div>
+        <div class="features__item flex container">
+            <div class="features__item_text">
+                <img src="/assets/Images/Featured icon.svg" alt="">
+                <h5>Miref Business Account</h5>
+                <p>Get the result that matters to your business. Enjoy multiple referrals to your business from within and outside your social circle.</p>
+                <br/>
+                <div class="features__list flex">
+                    <img src="/assets/Images/Check icon.svg" alt="">
+                    <p>Reduce expenses on social media ads that may not result in actual sales</p>
+                </div>
+                <br/>
+                <div class="features__list flex">
+                    <img src="/assets/Images/Check icon.svg" alt="">
+                    <p>Be in full Control of what you spend on marketing, choose how much you pay your referrers and pay only for completed referrals. </p>
+                </div>
+                <br/>
+                <div class="features__list flex">
+                    <img src="/assets/Images/Check icon.svg" alt="">
+                    <p>Connect your business with real people to source customers for you in and outside your social circle.</p>
+                </div>
+            </div>
+            <div class="features__image_1"></div>
+        </div>
+        <div class="features__item_2 flex container">
+            <div class="features__item_text_2">
+                <img src="/assets/Images//Featured icon black.svg" alt="">
+                <h5>Miref Personal Account</h5>
+                <p>Everyday, we casually refer our friends, families and acquaintances to patronize businesses that we trust, Miref is here to help you earn from those referrals.</p>
+                <br/>
+                <div class="features__list flex">
+                    <img src="/assets/Images/Check icon.svg" alt="">
+                    <p>Enjoy instant earnings when you refer customer to any business on miref.</p>
+                </div>
+                <br/>
+                <div class="features__list flex">
+                    <img src="/assets/Images/Check icon.svg" alt="">
+                    <p>Get a unique username that pays you across all businesses on Miref.</p>
+                </div>
+                <br/>
+                <div class="features__list flex">
+                    <img src="/assets/Images/Check icon.svg" alt="">
+                    <p>We monetize your social referrals; you chose your own bargain.</p>
+                </div>
+            </div>
+            <div class="features__image_2"></div>
+        </div>
+    </section>
+
+    <section class="newsletter section">
+        <div class="container">
+            <div class="newsletter__card">
+                <div>
+                    <h5>Subscribe to stay informed</h5>
+                    <p>Be the first to know when it’s launched</p>
+                    <form action="#" class="flex">
+                        <input type="text" placeholder="Name" class="input">
+                        <input type="text" placeholder="Email" class="input">
+                        <input type="submit" value="submit" class="btn-secondary newsletter__submit">
+                    </form>
+                    <p class="newsletter__help_text">We care about your data in our privacy policy</p>
+                </div>
+            </div>
         </div>
     </section>
 
