update footer section completed

--- a/index.html
+++ b/index.html
@@ -137,6 +137,62 @@
         </div>
     </section>
 
+    <footer class="footer section">
+        <div class="container">
+            <div class="flex footer__top flex-fd-c">
+                <div class="footer__brand flex flex-fd-c">
+                    <img src="/assets/Images/Logo.svg" alt="Logo">
+                    <p>We win together.</p>
+                    <p>Address : Plot 1141, Cadastral Zone B07, Katampe, Abuja</p>
+                </div>
+                <div class="flex footer__links_container flex-fd-c">
+                    <div class="flex footer__links_content">
+                        <div class="flex footer__links_column flex-fd-c">
+                            <p>Features</p>
+                            <div class="flex flex-fd-c footer__links">
+                                <a href="#">Miref Business</a>
+                                <a href="#">Miref Personal</a>
+                            </div>
+                        </div>
+                        <div class="flex footer__links_column flex-fd-c">
+                            <p>Company</p>
+                            <div class="flex flex-fd-c footer__links">
+                                <a href="#">About us</a>
+                                <a href="#">Careers</a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="flex footer__links_content">
+                        <div class="flex footer__links_column flex-fd-c">
+                            <p>Help</p>
+                            <div class="flex flex-fd-c footer__links">
+                                <a href="#">FAQ</a>
+                                <a href="#">Help centre</a>
+                            </div>
+                        </div>
+                        <div class="flex footer__links_column flex-fd-c">
+                            <p>Legal</p>
+                            <div class="flex flex-fd-c footer__links">
+                                <a href="#">Terms</a>
+                                <a href="#">Privacy</a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="container">
+            <div class="footer__bottom flex flex-fd-c">
+                <p>© 2023 Miref. All rights reserved.</p>
+                <div class="flex">
+                    <a href="#"><img src="/assets/Images/Twitter icon.svg" alt=""></a>
+                    <a href="#"><img src="/assets/Images/LinkedIn  icon.svg" alt=""></a>
+                    <a href="#"><img src="/assets/Images/Facebook icon.svg" alt=""></a>
+                </div>
+            </div>
+        </div>
+    </footer>
+
 <script src="/app/js/script.js"></script>
 </body>
 </html>
