completion of business page

--- a/business.html
+++ b/business.html
@@ -27,8 +27,8 @@
 
             <div class="header__links hide-for-mobile">
                 <!-- <a href="#">Home</a> -->
-                <a href="/about.html" class="active">About Us</a>
-                <a href="/business.html">For Business</a>
+                <a href="/about.html">About Us</a>
+                <a class="active" href="/business.html">For Business</a>
                 <a href="#">For Refferers</a>
                 <a href="#">FAQ</a>
                 <a href="#">Contact</a>
@@ -42,36 +42,84 @@
     <section class="hero section">
         <div class="hero__content container flex">
             <div class="hero__text">
-                <h1 id="text_width_about">A community of businesses and marketers <span>Winning</span> together</h1>
-                <p>Social collaboration has never been more profitable; you can now boost your earnings daily by helping a business grow.</p>
+                <h1 id="text_width_business">Open your business to a huge growth opportunity with <span>Miref</span> </h1>
+                <p id="sub_text_width_business">Connect with real people to source customers for you in and outside your social circle.</p>
                 <a href="#" class="btn-primary">Stay Informed</a>
             </div>
-            <img src="/assets/Images/about_hero_image_desktop.png" class="hero__image" alt="Hero Image">
-            <!-- <div class="hero__image"></div> -->
+            <img src="/assets/Images/business_hero_image_desktop.svg" class="hero__image hide-for-mobile" id="business_hero_image_desktop" alt="Hero Image">
+            <img src="/assets/Images/business_hero_image_mobile.svg" class="hero__image hide-for-desktop" alt="Hero Image">
         </div>
         <img src="/assets/Images/hero layer blur.png" alt="" class="hero__blur hide-for-mobile">
+        <img src="/assets/Images/hero_vector.svg" alt="" class="hero__vector hide-for-mobile">
     </section>
 
-    <section class="about section">
-        <div class="about__heading container">
-            <h3>Join the Miref  community</h3>
-            <p>Enjoy the unlimited benefits of this collaboration to grow your business or earn passive income.</p>
-        </div>
-        <div class="about__content container flex flex-fd-c">
-            <div class="about__content_text">
-                <h3>About Miref</h3>
-                <p>Miref is a product of Design ideation, created to build a strong community of freelance marketers and service providers/ small business owners, collaborating for the benefit of everyone.</p>
-                <p>Our aim is to truncate the high cost and stress involved in conventional marketing of services and products.</p>
-                <p>We are achieving this by making business owners access thousands of customers referred to them directly from people within and outside their social circle.</p>
-                <p>On the other hand, freelance marketers get rewarded instantly when they connect customers to businesses on Miref.</p>
-            </div>
-            <div class="about_content_image">
-                <img src="/assets/Images/about_us_image_desktop.png" class="hide-for-mobile" alt="About Section Image">
-                <img src="/assets/Images/about_us_image.png" class="hide-for-desktop" alt="About Section Image">
+     <!-- Social Proof Section -->
+     <section class="social_proof section">
+        <div class="social_proof__content container">
+            <p>Our Partners</p>
+            <div class="social_proof__logos flex">
+                <img src="/assets/Images/Monnify logo.svg" alt="">
+                <img src="/assets/Images/Quickteller logo.svg" alt="">
+                <img src="/assets/Images/Master Card logo.svg" alt="">
+                <img src="/assets/Images/Verve logo.svg" alt="">
+                <img src="/assets/Images/Visa logo.svg" alt="">
             </div>
         </div>
     </section>
 
+
+    <div class="business section">
+        <div class="business__container container flex flex-fd-c">
+            <div class="business__content">
+                <div class="business__text_item">
+                    <img src="/assets/Images//Featured icon black.svg" alt="">
+                    <h5>Miref Business Account</h5>
+                    <p>Miref business account is a robust solution we’ve created for you to harvest customers to your business with much ease.</p>
+                    <p>As a startup or existing small business, you will enjoy a huge growth opportunity with Miref as it helps link businesses with thousands of people who are ready to socially market and follow up customers until they successfully patronize your business.</p>
+                </div>
+                <div class="business__text_item">
+                    <img src="/assets/Images//Featured icon black.svg" alt="">
+                    <h5>Why Miref Business Account?</h5>
+                    <ul>
+                        <li>Get the result that matters to your business. Enjoy multiple referrals to your business without any stress.</li>
+                        <li>Reduce expenses on social media ads that may not result in actual sales by connecting your business with real people to source customers for you in and outside your social circle.</li>
+                        <li>Be in full Control of what you spend while marketing your business, you can choose how much you pay per referral and pay for only successful referrals.</li>
+                    </ul>
+                </div>
+            </div>
+            <div class="business__image_container">
+                <img src="/assets/Images/business_image_desktop.svg" class="hide-for-mobile" alt="Business Image Desktop">
+                <img src="/assets/Images/business_image.svg" class="hide-for-desktop" alt="Business Image Mobile">
+            </div>
+        </div>
+    </div>
+
+    <div class="business_how_it_works section">
+        <div class="business_how_it_works__container container flex flex-fd-c">
+            <div class="business_how_it_works__image_container">
+                <img src="/assets/Images/how_it_works_image_desktop.svg" alt="How it works Image" class="hide-for-mobile">
+                <img src="/assets/Images/how_it_works_image_mobile.svg" alt="How it works Image" class="hide-for-desktop">
+            </div>
+            <div class="business_how_it_works__list flex flex-fd-c">
+                <div class="business_how_it_works__list_item flex">
+                    <img src="/assets/Images/list_icon_1.svg" alt="List Icon">
+                    <p>Create an account for your business on miref.</p>
+                </div>
+                <div class="business_how_it_works__list_item flex">
+                    <img src="/assets/Images/list_icon_2.svg" alt="List Icon">
+                    <p>Set your preferred referral fee and fund your wallet to attract social referrals.</p>
+                </div>
+                <div class="business_how_it_works__list_item flex">
+                    <img src="/assets/Images/list_icon_3.svg" alt="List Icon">
+                    <p>Use the referral code submitted by customers to confirm referral after a successful transaction/ sale.</p>
+                </div>
+                <div class="business_how_it_works__list_item flex">
+                    <img src="/assets/Images/list_icon_4.svg" alt="List Icon">
+                    <p>Referrer gets credited directly from your wallet upon your confirmation.</p>
+                </div>
+            </div>
+        </div>
+    </div>
 
 
 
