--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
             <div class="header__links hide-for-mobile">
                 <!-- <a href="#">Home</a> -->
                 <a href="/about.html">About Us</a>
-                <a href="#">For Business</a>
+                <a href="/business.html">For Business</a>
                 <a href="#">For Refferers</a>
                 <a href="#">FAQ</a>
                 <a href="#">Contact</a>
