Contact page update

--- a/about.html
+++ b/about.html
@@ -27,14 +27,14 @@
 
             <div class="header__links hide-for-mobile">
                 <!-- <a href="#">Home</a> -->
-                <a href="/about.html" class="active">About Us</a>
+                <a class="active" href="/about.html">About Us</a>
                 <a href="/business.html">For Business</a>
-                <a href="#">For Refferers</a>
+                <a href="/Refferers.html">For Refferers</a>
                 <a href="#">FAQ</a>
-                <a href="#">Contact</a>
+                <a href="/contact.html">Contact</a>
             </div>
 
-            <a href="#" class="btn-primary hide-for-mobile">Stay Informed</a>
+            <a href="#newsletter_section" class="btn-primary hide-for-mobile">Stay Informed</a>
         </nav>
     </header>
 
@@ -44,7 +44,7 @@
             <div class="hero__text">
                 <h1 id="text_width_about">A community of businesses and marketers <span>Winning</span> together</h1>
                 <p>Social collaboration has never been more profitable; you can now boost your earnings daily by helping a business grow.</p>
-                <a href="#" class="btn-primary">Stay Informed</a>
+                <a href="#newsletter_section" class="btn-primary">Stay Informed</a>
             </div>
             <img src="/assets/Images/about_hero_image_desktop.png" class="hero__image" alt="Hero Image">
             <!-- <div class="hero__image"></div> -->
@@ -76,7 +76,7 @@
 
 
     <!-- Newsletter Section -->
-    <section class="newsletter section">
+    <section class="newsletter section" id="newsletter_section">
         <div class="container">
             <div class="newsletter__card">
                 <div>
