--- a/business.html
+++ b/business.html
@@ -29,12 +29,12 @@
                 <!-- <a href="#">Home</a> -->
                 <a href="/about.html">About Us</a>
                 <a class="active" href="/business.html">For Business</a>
-                <a href="#">For Refferers</a>
+                <a href="/Refferers.html">For Refferers</a>
                 <a href="#">FAQ</a>
-                <a href="#">Contact</a>
+                <a href="/contact.html">Contact</a>
             </div>
 
-            <a href="#" class="btn-primary hide-for-mobile">Stay Informed</a>
+            <a href="#newsletter_section" class="btn-primary hide-for-mobile">Stay Informed</a>
         </nav>
     </header>
 
@@ -44,7 +44,7 @@
             <div class="hero__text">
                 <h1 id="text_width_business">Open your business to a huge growth opportunity with <span>Miref</span> </h1>
                 <p id="sub_text_width_business">Connect with real people to source customers for you in and outside your social circle.</p>
-                <a href="#" class="btn-primary">Stay Informed</a>
+                <a href="#newsletter_section" class="btn-primary">Stay Informed</a>
             </div>
             <img src="/assets/Images/business_hero_image_desktop.svg" class="hero__image hide-for-mobile" id="business_hero_image_desktop" alt="Hero Image">
             <img src="/assets/Images/business_hero_image_mobile.svg" class="hero__image hide-for-desktop" alt="Hero Image">
@@ -124,7 +124,7 @@
 
 
     <!-- Newsletter Section -->
-    <section class="newsletter section">
+    <section class="newsletter section" id="newsletter_section">
         <div class="container">
             <div class="newsletter__card">
                 <div>
