--- a/index.html
+++ b/index.html
@@ -29,12 +29,12 @@
                 <!-- <a href="#">Home</a> -->
                 <a href="/about.html">About Us</a>
                 <a href="/business.html">For Business</a>
-                <a href="#">For Refferers</a>
+                <a href="/Refferers.html">For Refferers</a>
                 <a href="#">FAQ</a>
-                <a href="#">Contact</a>
+                <a href="/contact.html">Contact</a>
             </div>
 
-            <a href="#" class="btn-primary hide-for-mobile">Stay Informed</a>
+            <a href="#newsletter_section" class="btn-primary hide-for-mobile">Stay Informed</a>
         </nav>
     </header>
 
@@ -44,7 +44,7 @@
             <div class="hero__text">
                 <h1>Where Businesses and Referrers <span>meet</span></h1>
                 <p>Open up your business to thousands of freelance marketers or join to get instant payment when you refer customer to a business</p>
-                <a href="#" class="btn-primary">Stay Informed</a>
+                <a href="#newsletter_section" class="btn-primary">Stay Informed</a>
             </div>
             <!-- <div class="hero__image"></div> -->
             <img src="/assets/Images/home_hero_image.svg" class="hero__image hide-for-mobile" alt="Hero Image">
@@ -129,7 +129,7 @@
     </section>
 
     <!-- Newsletter Section -->
-    <section class="newsletter section">
+    <section class="newsletter section" id="newsletter_section">
         <div class="container">
             <div class="newsletter__card">
                 <div>
