--- a/business.html
+++ b/business.html
@@ -30,7 +30,7 @@
                 <a href="/about.html">About Us</a>
                 <a class="active" href="/business.html">For Business</a>
                 <a href="/Refferers.html">For Refferers</a>
-                <a href="#">FAQ</a>
+                <a href="/faq.html">FAQ</a>
                 <a href="/contact.html">Contact</a>
             </div>
 
