--- a/faq.html
+++ b/faq.html
@@ -30,8 +30,8 @@
                 <a href="/about.html">About Us</a>
                 <a href="/business.html">For Business</a>
                 <a href="/Refferers.html">For Refferers</a>
-                <a href="/faq.html">FAQ</a>
-                <a class="active" href="/contact.html">Contact</a>
+                <a class="active" href="/faq.html">FAQ</a>
+                <a href="/contact.html">Contact</a>
             </div>
 
             <a href="#newsletter_section" class="btn-primary hide-for-mobile">Stay Informed</a>
@@ -42,74 +42,42 @@
     <section class="hero section">
         <div class="hero__content container flex">
             <div class="hero__text">
-                <h1>We’d love to hear from you</h1>
-                <p>Our friendly team would love to hear from you.</p>
-                <a href="#newsletter_section" class="btn-primary">Stay Informed</a>
-            </div>
-            <div class="hero__map_container">
-                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d126042.96437494319!2d7.173670916406244!3d9.1686645!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x104e0bd760e8a8ff%3A0xf7e7d05c5e1861f!2sHeritage%20Academy!5e0!3m2!1sen!2sng!4v1674630062988!5m2!1sen!2sng" width="100%" height="400" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+                <h1 id="text_width_about">Frequently asked questions</h1>
+                <p id="faq_sub_text">Have any questions? We are here to help you.</p>
+                <div class="search_input" id="faq_search_input">
+                    <input type="text" placeholder="Search" class="input">
+                    <img src="/assets/Images/search_icon.svg" alt="Search Icon">
+                </div>
+                
             </div>
         </div>
         <img src="/assets/Images/hero layer blur.png" alt="" class="hero__blur hide-for-mobile">
     </section>
 
-    <section class="contact section">
-        <div class="contact__container container flex flex-fd-c">
-           <div class="contact__info_item flex flex-fd-c">
-                <h6>Support</h6>
-                <p>Our friendly team is here to help.</p>
-                <p class="contact_info">hello@miref.app</p>
-           </div> 
-           <div class="contact__info_item flex flex-fd-c">
-                <h6>Location</h6>
-                <p id="address_info">Address : Plot 1141, Cadastral Zone B07, Katampe, Abuja</p>
-           </div> 
-           <div class="contact__info_item flex flex-fd-c">
-                <h6>Phone</h6>
-                <p>Mon-Fri from 8am to 5pm.</p>
-                <p class="contact_info">+234 809 616 4848</p>
-           </div> 
-        </div>
-    </section>
 
-    <section class="form section">
-        <div class="form__container container flex flex-fd-c">
-            <div class="form__image_container">
-                <img class="hide-for-mobile" src="/assets/Images/contact_image.svg" alt="Contact Image">
-                <img class="hide-for-desktop" src="/assets/Images/contact_image_mobile.svg" alt="Contact Image">
+    <div class="faq section">
+        <div class="faq__container container flex flex-fd-c">
+            <div class="faq__item">
+                <div class="faq__header flex">
+                    <h6>How can I earn with Miref</h6>
+                    <img src="/assets/Images/featured_icon_close.svg" alt="Feature Icon">
+                    <!-- <img src="/assets/Images/featured_icon_open.svg" alt="Feature Icon"> -->
+                </div>
+                <p>Simply Create an account on Miref, your account comes with a personalized wallet and a unique referral code. Just copy your referral code and share with friends, convince them to patronize any of the thousands of businesses profiled on Miref, make sure your referred customers submit your Miref code every time they transact business on your referral. Your account gets credited automatically as soon as any transaction is confirmed with your Miref code by the business owner.</p>
             </div>
-            <div class="form__form">
-                <h5>Get in touch</h5>
-                <p>Our friendly team would love to hear from you.</p>
-                <form action="#">
-                    <div class="form__input_group flex flex-fd-c">
-                        <div class="form__input flex flex-fd-c">
-                            <label for="name">Name</label>
-                            <input type="text" placeholder="First Name" class="input">
-                        </div>
-                        <div class="form__input flex flex-fd-c">
-                            <label for="last_name">Last Name</label>
-                            <input type="text" placeholder="Last Name" class="input">
-                        </div>
-                    </div>
-                    <div class="form__input flex flex-fd-c">
-                        <label for="Email">Email</label>
-                        <input type="Email" placeholder="yourmail@company.com" class="input">
-                    </div>
-                    <div class="form__input flex flex-fd-c">
-                        <label for="phone_number">Phone Number</label>
-                        <input type="text" placeholder="+234 (080) 000-0000" class="input">
-                    </div>
-                    <div class="form__input flex flex-fd-c">
-                        <label for="message">Message</label>
-                        <!-- <input type="textarea" placeholder="+234 (080) 000-0000" class="input"> -->
-                        <textarea name="message" cols="30" rows="10"></textarea>
-                    </div>
-                    <input type="submit" value="Send Message" id="submit_button" class="btn-primary">
-                </form>
+            <div class="faq__item">
+                <div class="faq__header flex">
+                    <h6>Who can benefit from using Miref ?</h6>
+                    <!-- <img src="/assets/Images/featured_icon_close.svg" alt="Feature Icon"> -->
+                    <img src="/assets/Images/featured_icon_open.svg" alt="Feature Icon">
+                </div>
+                <!-- <p>Simply Create an account on Miref, your account comes with a personalized wallet and a unique referral code. Just copy your referral code and share with friends, convince them to patronize any of the thousands of businesses profiled on Miref, make sure your referred customers submit your Miref code every time they transact business on your referral. Your account gets credited automatically as soon as any transaction is confirmed with your Miref code by the business owner.</p> -->
             </div>
         </div>
-    </section>
+    </div>
+
+
+
 
 
 
