--- a/Refferers.html
+++ b/Refferers.html
@@ -42,7 +42,7 @@
     <section class="hero section">
         <div class="hero__content container flex">
             <div class="hero__text">
-                <h1 id="text_width_refferers">Enjoy instant <span id="heading_span_refferers">earnings</span> when you refer customer to any business</h1>
+                <h1 id="text_width_refferers">Enjoy instant <span id="heading_span_refferers">earnings</span> when you refer customer to a business</h1>
                 <p id="sub_text_width_refferers">Connect with real people to source customers for you in and outside your social circle.</p>
                 <a href="#newsletter_section" class="btn-primary">Stay Informed</a>
             </div>
