--- a/faq.html
+++ b/faq.html
@@ -60,18 +60,18 @@
             <div class="faq__item">
                 <div class="faq__header flex">
                     <h6>How can I earn with Miref</h6>
-                    <img src="/assets/Images/featured_icon_close.svg" alt="Feature Icon">
-                    <!-- <img src="/assets/Images/featured_icon_open.svg" alt="Feature Icon"> -->
+                    <img src="/assets/Images/featured_icon_close.svg" class="faq__close" alt="Feature Icon">
+                    <img src="/assets/Images/featured_icon_open.svg" class="faq__open" alt="Feature Icon">
                 </div>
-                <p>Simply Create an account on Miref, your account comes with a personalized wallet and a unique referral code. Just copy your referral code and share with friends, convince them to patronize any of the thousands of businesses profiled on Miref, make sure your referred customers submit your Miref code every time they transact business on your referral. Your account gets credited automatically as soon as any transaction is confirmed with your Miref code by the business owner.</p>
+                <p class="faq__text">Simply Create an account on Miref, your account comes with a personalized wallet and a unique referral code. Just copy your referral code and share with friends, convince them to patronize any of the thousands of businesses profiled on Miref, make sure your referred customers submit your Miref code every time they transact business on your referral. Your account gets credited automatically as soon as any transaction is confirmed with your Miref code by the business owner.</p>
             </div>
             <div class="faq__item">
                 <div class="faq__header flex">
                     <h6>Who can benefit from using Miref ?</h6>
-                    <!-- <img src="/assets/Images/featured_icon_close.svg" alt="Feature Icon"> -->
-                    <img src="/assets/Images/featured_icon_open.svg" alt="Feature Icon">
+                    <img src="/assets/Images/featured_icon_close.svg" class="faq__close" alt="Feature Icon">
+                    <img src="/assets/Images/featured_icon_open.svg" class="faq__open" alt="Feature Icon">
                 </div>
-                <!-- <p>Simply Create an account on Miref, your account comes with a personalized wallet and a unique referral code. Just copy your referral code and share with friends, convince them to patronize any of the thousands of businesses profiled on Miref, make sure your referred customers submit your Miref code every time they transact business on your referral. Your account gets credited automatically as soon as any transaction is confirmed with your Miref code by the business owner.</p> -->
+                <p class="faq__text" >Simply Create an account on Miref, your account comes with a personalized wallet and a unique referral code. Just copy your referral code and share with friends, convince them to patronize any of the thousands of businesses profiled on Miref, make sure your referred customers submit your Miref code every time they transact business on your referral. Your account gets credited automatically as soon as any transaction is confirmed with your Miref code by the business owner.</p>
             </div>
         </div>
     </div>
